--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
   <div class="platform">
   </div>
   <div class="quote">
-    Wishing you a very happy birthday, Durga Akka ! <br>
-    Your voice is a gift that brings joy and always resonates in me. <br>
-    May your special day be filled with love, laughter, and all the blessings you deserve. <br>
+    Wishing you a very happy birthday, Durga Akka ! 
+    Your voice is a gift that brings joy and always resonates with me. 
+    May your special day be filled with love, laughter, and all the blessings you deserve.
     With Lots of love! <br>
                     - Saivara
   </div>
